--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -38,6 +38,7 @@
 	<section id="portfolio">
 		<h2>Mes Projets</h2>
 		<div class="filters">
+			<button id="tous" class="filters__button filters__button--selected">Tous</button>
 		</div>
 		<div class="gallery">
 		</div>
