Ajout du formulaire de connexion

--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -22,5 +22,19 @@
                 </ul>
             </nav>
         </header>
+        <main>
+            <h2>Log In</h2>
+            <!--Ajout d'un formulaire de connexion-->
+            <form>
+                <label class="form__label">E-mail
+                    <input class="form__label__input" type="email" id="email">
+                </label>
+                <label class="form__label">Mot de passe
+                    <input class="form__label__input" type="password" id="password">
+                </label>
+                <button class="form__button">Se connecter</button>
+            </form>
+            <a class="password_forgot" href="#">Mot de passe oublié</a>
+        </main>
     </body>
 </html>
