Ajout du pied de page

--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -36,5 +36,12 @@
             </form>
             <a class="password_forgot" href="#">Mot de passe oublié</a>
         </main>
+        <footer>
+            <nav>
+                <ul>
+                    <li>Mentions Légales</li>
+                </ul>
+            </nav>
+        </footer>
     </body>
 </html>
