--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -9,15 +9,16 @@
         <link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
         <meta name="description" content="">
         <link rel="stylesheet" href="./assets/login.css">
+        <script type="module" src="assets/login.js" defer></script>
     </head>
     <body>
         <header>
-            <h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
+            <a href="index.html"><h1>Sophie Bluel <span>Architecte d'intérieur</span></h1></a>
             <nav>
                 <ul>
                     <li>projets</li>
                     <li>contact</li>
-                    <li><a href="login.html">login</a></li>
+                    <li class="login"><a href="login.html">login</a></li>
                     <li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
                 </ul>
             </nav>
