Ajout d'un bandeau administrateur

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -12,6 +12,10 @@
 	<script type="module" src="assets/works.js" defer></script>
 </head>
 <body>
+	<div class="adminBand" hidden>
+		<img src="assets/icons/admin.svg" alt="icon de modification" class="adminBand__icon">
+		<p class="adminBand__text">Mode édition</p>
+	</div>
 <header>
 	<h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
 	<nav>
