Ajout d'une div et d'un bouton pour la modification des travaux

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -40,7 +40,10 @@
 		</article>
 	</section>
 	<section id="portfolio">
-		<h2>Mes Projets</h2>
+		<div class="portfolio__title">
+			<h2 class="portfolio__h2">Mes Projets</h2>
+			<button class="modifier" hidden><img src="assets/icons/modifier.svg" alt="icon de modification" class="modifier__icon">Modifier</button>
+		</div>
 		<div class="filters">
 			<button id="tous" class="filters__button filters__button--selected">Tous</button>
 		</div>
