Correction des attribut pour masquer l'affichage de la modale

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -80,7 +80,7 @@
 			<button class="modale__content__addWorks" href="#modale__addWorks">Ajouter une photo</button>
 		</div>
 	</div>
-		<div id="modale__addWorks"  class="modale__addWorks" role="dialog" sytle="display:none"  aria-hidden="true" aria-labelledby="modale__addWorks__title">
+		<div id="modale__addWorks"  class="modale__addWorks" aria-hidden="true" role="dialog" aria-labelledby="modale__addWorks__title" style="display:none">
 			<div class="modale__addWorks__content  modale__stopClose">
 				<button class="modale__addWoks__close"><img class ="modale__content__close--image" src="assets/icons/xmark.svg" alt="Fermer la fenêtre"></button>
 				<button class="modale__addWoks__back"><img class ="modale__content__back--image" src="assets/icons/arrow-left.png" alt="Retour"></button>
